--- a/src/main/resources/com/example/csc325/csc325/style.css
+++ b/src/main/resources/com/example/csc325/csc325/style.css
@@ -20,7 +20,7 @@
     -fx-border-color:#808080;
     -fx-alignment:CENTER;
     -fx-background-radius:5;
-    -fx-pref-width:404x;
+    -fx-pref-width:404px;
     -fx-pref-height:40px;
 }
 
