--- a/src/main/resources/com/example/csc325/csc325/msignup.fxml
+++ b/src/main/resources/com/example/csc325/csc325/msignup.fxml
@@ -56,8 +56,8 @@
                 <TextField promptText="Confirm Password" GridPane.rowIndex="9" />
                 <TextField fx:id="phoneNumberField" promptText="Phone number (xxx-xxx-xxxx)" GridPane.rowIndex="5" />
                 <Label fx:id="phoneNumberCheck" />
-                <Button mnemonicParsing="false" onAction="#handleAddButtonClick" prefHeight="26.0" prefWidth="40.0" styleClass="nav_btn" text="Sign Up" GridPane.rowIndex="10" />
-                <Button fx:id="signUp" mnemonicParsing="false" prefHeight="36.0" prefWidth="581.0" styleClass="nav_btn2" text="Sign Up with Google" GridPane.rowIndex="13" />
+                <Button fx:id="signUp" mnemonicParsing="false" onAction="#handleSignUp" prefHeight="26.0" prefWidth="40.0" styleClass="nav_btn" text="Sign Up" GridPane.rowIndex="10" />
+                <Button fx:id="signUpGoogle" mnemonicParsing="false" onAction="#handleGoogleSignUp" prefHeight="36.0" prefWidth="581.0" styleClass="nav_btn2" text="Sign Up with Google" GridPane.rowIndex="13" />
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="11">
                     <children>
                         <Label layoutX="192.0" layoutY="11.0" text="Already have an account?" />
