--- a/src/main/resources/com/example/csc325/csc325/mlogin.fxml
+++ b/src/main/resources/com/example/csc325/csc325/mlogin.fxml
@@ -37,8 +37,8 @@
                         <Font size="25.0" />
                     </font>
                 </Label>
-                <TextField fx:id="usernameLabel" prefHeight="34.0" prefWidth="386.0" promptText="Email" GridPane.rowIndex="1" />
-                <TextField fx:id="passwordLabel" prefHeight="34.0" prefWidth="386.0" styleClass="password-label" GridPane.rowIndex="2" />
+                <TextField fx:id="usernameField" prefHeight="34.0" prefWidth="386.0" promptText="Email" GridPane.rowIndex="1" />
+                <TextField fx:id="passwordField" prefHeight="34.0" prefWidth="386.0" styleClass="password-label" GridPane.rowIndex="2" />
                 <PasswordField fx:id="hiddenPasswordField" managed="false" prefHeight="33.0" prefWidth="332.0" promptText="Password" styleClass="password-field" GridPane.rowIndex="2" />
                 <TextField fx:id="visiblePasswordField" prefHeight="34.0" prefWidth="386.0" promptText="Password" styleClass="password-field" GridPane.rowIndex="2" />
                 <Button fx:id="btnTogglePassword" mnemonicParsing="false" onAction="#togglePasswordVisibility" prefHeight="26.0" prefWidth="49.0" styleClass="password-toggle-button" text="Show" GridPane.columnIndex="1" GridPane.rowIndex="2">
