--- a/src/main/resources/com/example/csc325/csc325/msignup.fxml
+++ b/src/main/resources/com/example/csc325/csc325/msignup.fxml
@@ -5,35 +5,30 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="629.0" prefWidth="600.0" styleClass="anchor_pane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.msignup">
+<AnchorPane prefHeight="629.0" prefWidth="600.0" styleClass="anchor_pane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.msignup">
     <children>
         <GridPane layoutX="36.0" layoutY="31.0" prefHeight="604.0" prefWidth="529.0" styleClass="anchor_pane">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="50.0" minHeight="7.0" prefHeight="28.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="75.0" minHeight="6.0" prefHeight="25.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="122.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="101.0" minHeight="0.0" prefHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="97.0" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="60.0" minHeight="6.0" prefHeight="6.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="89.0" minHeight="10.0" prefHeight="81.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="56.0" minHeight="0.0" prefHeight="11.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="50.0" minHeight="7.0" prefHeight="38.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="75.0" minHeight="6.0" prefHeight="36.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="122.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="101.0" minHeight="0.0" prefHeight="81.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="103.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="60.0" minHeight="0.0" prefHeight="42.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="91.0" minHeight="10.0" prefHeight="91.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="60.0" minHeight="0.0" prefHeight="20.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="78.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="110.0" minHeight="10.0" prefHeight="78.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="60.0" minHeight="0.0" prefHeight="34.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="110.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="90.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
@@ -48,18 +43,17 @@
                 <Label fx:id="lastNameCheck" />
                 <TextField fx:id="emailField" promptText="Email address" GridPane.rowIndex="4" />
                 <Label fx:id="emailCheck" />
-                <TextField fx:id="passwordFeild" promptText="Password" GridPane.rowIndex="8" />
-                <TextField fx:id="ConfirmPasswordFeild" promptText="Confirm Password" GridPane.rowIndex="9" />
-                <TextField fx:id="phoneNumberField" promptText="Phone number (xxx-xxx-xxxx)" GridPane.rowIndex="5" />
+                <TextField fx:id="passwordFeild" promptText="Password" GridPane.rowIndex="6" GridPane.valignment="BOTTOM" />
+                <TextField fx:id="ConfirmPasswordFeild" promptText="Confirm Password" GridPane.rowIndex="7" />
+                <TextField fx:id="phoneNumberField" promptText="Phone number (xxx-xxx-xxxx)" GridPane.rowIndex="5" GridPane.valignment="TOP" />
                 <Label fx:id="phoneNumberCheck" />
-                <Button fx:id="signUp" mnemonicParsing="false" onAction="#handleSignUp" prefHeight="26.0" prefWidth="40.0" styleClass="nav_btn" text="Sign Up" GridPane.rowIndex="10" />
-                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="11">
+                <Button fx:id="signUp" mnemonicParsing="false" onAction="#handleSignUp" prefHeight="26.0" prefWidth="40.0" styleClass="nav_btn" text="Sign Up" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
+                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="9">
                     <children>
                         <Label layoutX="192.0" layoutY="11.0" text="Already have an account?" />
                         <Hyperlink layoutX="332.0" layoutY="8.0" text="Login" />
                     </children>
                 </AnchorPane>
-                <Label prefHeight="17.0" prefWidth="572.0" text="or" textFill="GREY" GridPane.rowIndex="12" />
             </children>
         </GridPane>
     </children>
