--- a/src/main/resources/com/example/csc325/csc325/employeeProfile.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employeeProfile.fxml
@@ -1,35 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Circle?>
 
-<AnchorPane prefHeight="750.0" prefWidth="1000.0" style="-fx-background-color: skyblue;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.employeeProfileController">
+<AnchorPane prefHeight="724" prefWidth="708" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="profilePicture" fitHeight="166.0" fitWidth="171.0" layoutX="100.0" layoutY="21.0" onMouseClicked="#showProfilePicture" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@defaultprofilepic.jpg" />
-         </image></ImageView>
-      <TextArea layoutX="7.0" layoutY="220.0" prefHeight="430.0" prefWidth="383.0" promptText="About Me" />
-      <TextArea layoutX="396.0" layoutY="42.0" prefHeight="199.0" prefWidth="588.0" promptText="Past Experience" />
-      <ListView fx:id="skillListView" editable="true" layoutX="643.0" layoutY="321.0" prefHeight="357.0" prefWidth="345.0" />
-      <TextField fx:id="skill" layoutX="396.0" layoutY="321.0" prefHeight="31.0" prefWidth="238.0" promptText="Enter a Skill" />
-      <Label layoutX="765.0" layoutY="274.0" text="Skills List:">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Button fx:id="addSkill" layoutX="476.0" layoutY="383.0" mnemonicParsing="false" onMouseClicked="#addSkilltoList" text="Add Skill" />
-      <Button layoutX="762.0" layoutY="689.0" mnemonicParsing="false" onMouseClicked="#removeSkillfromList" text="Remove Skill" />
-      <CheckBox layoutX="101.0" layoutY="672.0" mnemonicParsing="false" text="Seeking Job">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </CheckBox>
-      <Label fx:id="username" layoutX="148.0" layoutY="187.0" text="Defualt">
-         <font>
-            <Font size="23.0" />
-         </font></Label>
+      <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="704.0" prefWidth="688.0" style="-fx-background-color: white; -fx-padding: 20;">
+         <children>
+            <ImageView fitHeight="724" fitWidth="688" layoutX="0.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@banner.jpeg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="86.0" fitWidth="129.0" layoutX="46.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
+               <clip>
+                  <Circle centerX="43.0" centerY="43.0" radius="43.0" />
+               </clip>
+               <image>
+                  <Image url="@profile.png" />
+               </image>
+            </ImageView>
+            <TextField layoutX="14.0" layoutY="186.0" prefHeight="26.0" prefWidth="150.0" promptText="Full Name" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+            <TextField layoutX="181.0" layoutY="186.0" prefHeight="26.0" prefWidth="100.0" promptText="Pronouns" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+            <TextArea layoutX="16.0" layoutY="227.0" prefHeight="100.0" prefWidth="628.0" promptText="About me" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+            <TextArea layoutX="16.0" layoutY="354.0" prefHeight="100.0" prefWidth="628.0" promptText="Education" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+            <TextArea layoutX="16.0" layoutY="476.0" prefHeight="100.0" prefWidth="628.0" promptText="Past Experience" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+            <TextArea layoutX="16.0" layoutY="590.0" prefHeight="100.0" prefWidth="628.0" promptText="Skills" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+         </children>
+      </AnchorPane>
    </children>
+   <stylesheets>
+      <URL value="@style.css" />
+      <URL value="@../../../../../styling/style.css" />
+   </stylesheets>
 </AnchorPane>
