--- a/src/main/resources/com/example/csc325/csc325/searchPage.fxml
+++ b/src/main/resources/com/example/csc325/csc325/searchPage.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
-
 <?import java.net.URL?>
-<VBox alignment="TOP_CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.csc325.csc325.Controllers.searchController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox alignment="TOP_CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="com.example.csc325.csc325.Controllers.searchController">
     <style>
         /* Add a background image to the entire page */
         -fx-background-image: url('https://img.freepik.com/premium-photo/keyboard-coffee-smartphone-notebook-color-background-top-view_1286-776.jpg');
@@ -21,14 +20,19 @@
         <URL value="@Stylesheet.css" />
     </stylesheets>
     <HBox alignment="CENTER" styleClass="header">
-        <Label text="Job Search" styleClass="header-label" />
+        <Label styleClass="header-label" text="Job Search" />
     </HBox>
     <HBox alignment="CENTER" spacing="10">
         <TextField fx:id="searchField" promptText="Search Jobs" />
-        <Button text="Search" onAction="#searchJobs" />
+        <Button onAction="#searchJobs" text="Search" />
     </HBox>
-    <ScrollPane fitToWidth="true" fitToHeight="true">
-        <VBox spacing="10" alignment="CENTER" fx:id="jobListingsContainer">
+   <HBox alignment="CENTER" >
+      <children>
+           <Label text="Ender Keywords separated by a space" />
+      </children>
+   </HBox>
+    <ScrollPane fitToHeight="true" fitToWidth="true">
+        <VBox fx:id="jobListingsContainer" alignment="CENTER" spacing="10">
 <!--            &lt;!&ndash; Job Listing 1 &ndash;&gt;-->
 <!--            <HBox styleClass="job-listing">-->
 <!--                <VBox spacing="5">-->
