--- a/src/main/resources/com/example/csc325/csc325/employerListing.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employerListing.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -21,12 +20,11 @@
                         <Image url="@company.png" />
                     </image>
                 </ImageView>
-                <TextField layoutX="14.0" layoutY="190.0" prefHeight="26.0" prefWidth="150.0" promptText="Job Title" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
-                <DatePicker layoutX="179.0" layoutY="190.0" prefHeight="26.0" prefWidth="120.0" promptText="Date" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
-                <TextArea layoutX="30.0" layoutY="240.0" prefHeight="100.0" prefWidth="628.0" promptText="Job Description" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
-                <TextArea layoutX="30.0" layoutY="356.0" prefHeight="100.0" prefWidth="628.0" promptText="Required Education" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
-                <TextArea layoutX="30.0" layoutY="474.0" prefHeight="100.0" prefWidth="628.0" promptText="Required Experience" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
-                <TextArea layoutX="26.0" layoutY="590.0" prefHeight="100.0" prefWidth="628.0" promptText="Required Skills" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+                <TextField layoutX="24.0" layoutY="256.0" prefHeight="26.0" prefWidth="150.0" promptText="Job Title" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+                <TextField layoutX="24.0" layoutY="191.0" prefHeight="26.0" prefWidth="150.0" promptText="Company Name" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+                <TextField layoutX="24.0" layoutY="322.0" prefHeight="26.0" prefWidth="150.0" promptText="Email" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+                <TextField layoutX="24.0" layoutY="380.0" prefHeight="26.0" prefWidth="150.0" promptText="Phone Number" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+                <Label fx:id="lblErrorMsg" layoutX="40.0" layoutY="498.0" prefHeight="17.0" prefWidth="48.0" textFill="#e80b0b" />
             </children>
         </AnchorPane>
     </children>
