--- a/src/main/resources/com/example/csc325/csc325/employeeProfile.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employeeProfile.fxml
@@ -7,8 +7,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="724" prefWidth="708" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="724" prefWidth="708" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="704.0" prefWidth="688.0" style="-fx-background-color: white; -fx-padding: 20;">
          <children>
@@ -27,10 +28,12 @@
             </ImageView>
             <TextArea layoutX="8.0" layoutY="251.0" prefHeight="195.0" prefWidth="628.0" promptText="About me" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
             <TextArea layoutX="8.0" layoutY="463.0" prefHeight="161.0" prefWidth="628.0" promptText="Skills" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
-            <Label layoutX="17.0" layoutY="193.0" text="First Name" textFill="#949090" />
-            <Label layoutX="95.0" layoutY="193.0" text="Last Name" textFill="#949090" />
-            <Label layoutX="196.0" layoutY="193.0" text="Email" textFill="#949090" />
-            <Label layoutX="262.0" layoutY="193.0" text="Phone Number" textFill="#949090" />
+            <Label fx:id="employeeName" alignment="CENTER" contentDisplay="CENTER" layoutX="45.0" layoutY="41.0" prefHeight="105.0" prefWidth="644.0" textFill="#949090">
+               <font>
+                  <Font size="36.0" />
+               </font></Label>
+            <Label layoutX="74.0" layoutY="186.0" prefHeight="28.0" prefWidth="188.0" text="Email" textFill="#949090" />
+            <Label layoutX="338.0" layoutY="186.0" prefHeight="28.0" prefWidth="188.0" text="Phone Number" textFill="#949090" />
             <Label fx:id="lblErrorMsg" layoutX="46.0" layoutY="669.0" textFill="#eb0f0f" />
          </children>
       </AnchorPane>
