--- a/src/main/resources/com/example/csc325/csc325/searchPage.fxml
+++ b/src/main/resources/com/example/csc325/csc325/searchPage.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <VBox alignment="TOP_CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="com.example.csc325.csc325.Controllers.searchController">
     <style>
         /* Add a background image to the entire page */
@@ -21,6 +23,16 @@
     </stylesheets>
     <HBox alignment="CENTER" styleClass="header">
         <Label styleClass="header-label" text="Job Search" />
+        <Button onAction="#employeeProfileLoader" graphicTextGap="0">
+            <graphic>
+                <!-- Add your icon image URL here -->
+                <ImageView fitHeight="15" fitWidth="15" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@YourIconImage.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
     </HBox>
     <HBox alignment="CENTER" spacing="10">
         <TextField fx:id="searchField" promptText="Search Jobs" />
