Implemented auto Populate and shows one name

--- a/src/main/resources/com/example/csc325/csc325/searchPage.fxml
+++ b/src/main/resources/com/example/csc325/csc325/searchPage.fxml
@@ -23,16 +23,7 @@
     </stylesheets>
     <HBox alignment="CENTER" styleClass="header">
         <Label styleClass="header-label" text="Job Search" />
-        <Button onAction="#employeeProfileLoader" graphicTextGap="0">
-            <graphic>
-                <!-- Add your icon image URL here -->
-                <ImageView fitHeight="15" fitWidth="15" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@YourIconImage.png" />
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
+        <Button onAction="#employeeProfileLoader" graphicTextGap="0" />
     </HBox>
     <HBox alignment="CENTER" spacing="10">
         <TextField fx:id="searchField" promptText="Search Jobs" />
