--- a/src/main/resources/com/example/csc325/csc325/searchPage.fxml
+++ b/src/main/resources/com/example/csc325/csc325/searchPage.fxml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<VBox alignment="TOP_CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.csc325.csc325.Controllers.searchController" style="-fx-background-color: #f2f2f2;">
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox alignment="TOP_CENTER" spacing="10" style="-fx-background-color: #f2f2f2;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.example.csc325.csc325.Controllers.searchController">
     <!-- Smoke Grey Background -->
     <VBox style="-fx-background-color: #ddd;">
         <!-- Existing content -->
         <HBox alignment="TOP_RIGHT" styleClass="header">
             <!-- Profile Picture Icon -->
             <Button onAction="#employeeProfileLoader">
-                <ImageView fitWidth="50" fitHeight="50"> <!-- Set your desired width and height -->
-                    <image>
-                        <Image url="https://th.bing.com/th/id/OIP.NqY3rNMnx2NXYo3KJfg43gAAAA?rs=1pid=ImgDetMain"/>
-                    </image>
-                </ImageView>
-            </Button>
+            <graphic>
+                      <ImageView fitHeight="50" fitWidth="50"> <!-- Set your desired width and height -->
+                          <image>
+                              <Image url="@defaultprofilepic.jpg" />
+                          </image>
+                      </ImageView>
+            </graphic></Button>
+
         </HBox>
-
-
         <HBox alignment="CENTER" styleClass="header">
             <!-- Profile Picture Icon -->
 
-            <Label text="Job Search" styleClass="header-label"/>
+            <Label styleClass="header-label" text="Job Search" />
         </HBox>
         <HBox alignment="CENTER" spacing="10">
-            <TextField fx:id="searchField" promptText="Search Jobs"/>
-            <Button text="Search" onAction="#searchJobs"/>
+            <TextField fx:id="searchField" promptText="Search Jobs" />
+            <Button onAction="#searchJobs" text="Search" />
         </HBox>
-        <ScrollPane fitToWidth="true" fitToHeight="true">
-            <VBox spacing="10" alignment="CENTER" fx:id="jobListingsContainer">
+        <ScrollPane fitToHeight="true" fitToWidth="true">
+            <VBox fx:id="jobListingsContainer" alignment="CENTER" spacing="10">
 
             </VBox>
         </ScrollPane>
