--- a/src/main/resources/com/example/csc325/csc325/msignup.fxml
+++ b/src/main/resources/com/example/csc325/csc325/msignup.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="629.0" prefWidth="600.0" styleClass="anchor_pane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.msignup">
+<AnchorPane prefHeight="629.0" prefWidth="600.0" styleClass="anchor_pane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.signUpController">
     <children>
         <GridPane layoutX="36.0" layoutY="31.0" prefHeight="604.0" prefWidth="529.0" styleClass="anchor_pane">
             <columnConstraints>
